--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,11 @@ language: julia
 
 os:
   - linux
-  #- osx
+  - osx
   
 env:
   - JULIA_CMDSTAN_HOME="$HOME/cmdstan-2.19.1/"
+  - CMDSTAN_HOME="$HOME/cmdstan-2.19.1/"
   
 before_install:
   - OLDWD=`pwd`
